# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.33

  - WL#15490, Support OCI ephemeral key based authentication.

Version 8.0.32

  - Fix for Bug#104954 (Bug#33361205), MysqlDataSource fails to URL encode database name when constructing JDBC URL.
    Thanks to Jared Lundell for his contribution. 

  - Fix for Bug#102520 (Bug#32476663), serverSideStatementCache ignores resultSetType.

  - Fix for Bug#68608 (Bug#16690898), UpdatableResultSet does not properly handle unsigned primary key.

  - Fix for Bug#102678 (Bug#32536384), Connector/J 8 query with explain can not return ResultRow.

  - Fix for Bug#99604 (Bug#31612628), Add support to row alias on INSERT... ON DUPLICATE KEY UPDATE on batch mode.

  - Fix for Bug#105449 (Bug#33563505), connectionCollation ignored if characterEncoding is set.

  - Fix for Bug#108195 (Bug#34512212), Connector/J rejects UNION with CTE.

  - WL#15468, Upgrade 3rd party libraries and tools.

  - WL#15411, Upgrade Protocol Buffers dependency to protobuf-java-3.21.9.

  - Fix for Bug#108414 (Bug#34578541), Malformed packet generation for `COM_STMT_EXECUTE`.
    Thanks to Seongman Yang for his contribution.

  - Fix for Bug#106252 (Bug#33968169), Connector/J client hangs after prepare & execute process with old version server.
    Thanks to Zhe Huang for his contribution.

  - Fix for Bug#34725725, RPM and DEB builds broken after introducing javadoc for maven bundles.

  - Fix for Bug#108814 (Bug#34717205), Contribution: Fix name of relocation POM file.
    Thanks to Henning Pöttker for his contribution.

  - WL#15437, Sonatype compliant POM and maven bundles.

  - Fix for Bug#106981 (Bug#34059340), Contribution: [PATCH] Remove superfluous use of boxing.
    Thanks to Andrey Turbanov for his contribution.

  - Fix for Bug#108419 (Bug#34578010), Contribution: Recognize "ON DUPLICATE KEY UPDATE" in "INSERT SET" Statement.
    Thanks to Yamasaki Tadashi for his contribution.

Version 8.0.31
